--- a/src/index.css
+++ b/src/index.css
@@ -33,11 +33,62 @@
 }
 
 .menu-component {
-    background-color: aquamarine;
+    background-color: transparent;
+    backdrop-filter: blur(7px);
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.24);
+    border-radius: 10px;
     width: 50vw;
     height: 95vh;
     position: absolute;
+    padding-top: 20px;
+    padding-left: 20px;
 }
+
+.main-links button {
+    background-color: aliceblue;
+    border-radius: 5px;
+    padding: 5px 0px 5px 10px;
+    width: 100%;
+}
+
+.main-links button:hover {
+    background-color: #ECA823;
+    transition: ease-in-out 500ms;
+}
+
+.genres-filter li {
+    background-color: aliceblue;
+    border-radius: 5px;
+    padding: 5px 0px 5px 10px;
+    cursor: pointer;
+}
+
+.genres-filter li:hover {
+    background-color: #ECA823;
+    transition: ease-in-out 500ms;
+}
+
+/* ** Screen adjustments */
+
+@media screen and (min-width: 768px) {
+    .menu-component {
+        min-width: 150px;
+        max-width: 200px;
+        background-color: white;
+    }
+}
+
+/* ** Screen adjustments */
 
 
 /* !! Styling for the menu behavior */
+
+
+
+/* !! Styling for the main content of the page */
+
+
+
+
+
+/* !! Styling for the main content of the page */
