--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,7 @@
         min-width: 150px;
         max-width: 200px;
         background-color: white;
+        position: static;
     }
 }
 
@@ -87,7 +88,8 @@
 
 /* !! Styling for the main content of the page */
 
-
+@media screen and (min-width: 768px) {
+}
 
 
 
