--- a/src/index.css
+++ b/src/index.css
@@ -115,3 +115,20 @@
 
 
 /* !! Styling for the main content of the page */
+
+/* !! Styling for game details page */
+
+.bg-image {
+    width: 100%;
+    height: 25vh;
+    object-fit: cover;
+}
+
+@media screen and (min-width: 768px) {
+    .bg-image {
+        height: 40vh;
+    }
+}
+
+
+/* !! Styling for game details page */
