added the dark mode/sign out function/readme file

--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,10 @@
     transition: ease-in-out 500ms;
 }
 
+.main-links.dark {
+    background-color: #3F4246;
+}
+
 .genres-filter {
     background-color: aliceblue;
     border-radius: 5px;
