--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
   }
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 /* !! Styling for the menu behavior */
 
 .menu-container {
@@ -93,26 +97,37 @@
 .game-container div {
   bottom: 20px;
   width: 100%;
-  /* height: auto; */
   background-color: transparent;
   backdrop-filter: blur(5px);
-  /* padding-bottom: 20px; */
   border-radius: 5px 5px 10px 10px;
-  opacity: 0;
+  opacity: 1;
   align-items: center;
 }
 
-.game-container:hover div {
-  /* bottom: 20px; */
+/* .game-container:hover div {
   opacity: 1;
   transition: ease-in-out 500ms;
-}
+} */
 
 .details-component {
   max-width: 500px;
 }
 
 @media screen and (min-width: 768px) {
+  .game-container div {
+    bottom: 20px;
+    width: 100%;
+    background-color: transparent;
+    backdrop-filter: blur(5px);
+    border-radius: 5px 5px 10px 10px;
+    opacity: 0;
+    align-items: center;
+  }
+
+  .game-container:hover div {
+    opacity: 1;
+    transition: ease-in-out 500ms;
+  }
 }
 
 /* !! Styling for the main content of the page */
@@ -170,10 +185,17 @@
 }
 
 .listSelector-wrapper.active {
+  width: 100%;
+  max-width: 320px;
   display: flex;
   position: absolute;
   background: white;
-  box-shadow: 0 0 0 9999px #000000b0;
+  box-shadow: 0 0 10px 0 #0000006c;
   padding: 30px 20px 30px 20px;
   border-radius: 10px;
+}
+
+.menu-container.active {
+  box-shadow: 0 0 0 9999px #00000092;
+  z-index: 999;
 }
